--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
           }
         };
         
-        // Try to fetch from API first, fallback to demo
-        fetch('/api/mission-control')
+        // Try to fetch data.json first, fallback to demo
+        fetch('./data.json')
           .then(r => r.ok ? r.json() : Promise.reject())
           .then(d => { setData(d); setLoading(false); })
           .catch(() => { setData(demoData); setLoading(false); });
